--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -13,3 +13,14 @@
   position: relative;
   overflow: hidden;
 }
+
+.like_group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.like_counter {
+  margin: 0;
+  margin-top: 3px;
+}
