--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -25,3 +25,10 @@
     line-height: 17px;
   }
 }
+
+.popup__button_inactive {
+  background:rgb(255, 255, 255);
+  color: rgba(0, 0, 0, .3);
+  border: 1px solid rgba(0, 0, 0, .3);
+  border-radius: 2px;
+}
