--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -20,3 +20,10 @@
     line-height: 15px;
   }
 }
+
+.form__input-error_active {
+  color: red;
+}
+.popup__input_type_error {
+  border-bottom-color: red;
+}
